# league-voice

./: .gitignore  Cargo.toml  LICENSE  README.md  asoundrc
.github/workflows/: test.yml
crates/app/: Cargo.toml  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/app/components/app/: audio-device-selector.tsx  menu-bar.tsx
crates/app/components/ui/: badge.tsx  button.tsx  label.tsx  select.tsx
crates/app/lib/: utils.ts
crates/app/src/: App.tsx  index.css
crates/app/src-tauri/: Cargo.toml  tauri.conf.json
crates/app/src-tauri/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  error.rs  lib.rs  main.rs
crates/client/src/audio/: cpal.rs  cpal_device.rs  cpal_util.rs  mod.rs  processor.rs
crates/client/src/audio/codec/: mod.rs  opus.rs
crates/client/src/client/: mod.rs  tokio.rs
crates/client/src/handlers/: audio.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/packet/: error.rs  ids.rs  mod.rs  packet_type.rs
crates/common/src/packet/types/: audio.rs  connect.rs  disconnect.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  main.rs
crates/server/src/packets/: mod.rs
crates/server/src/packets/handlers/: audio.rs  connect.rs  disconnect.rs  mod.rs
crates/server/src/server/: client.rs  mod.rs  mod.rs.rs  tokio.rs
