[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0"

common = { path = "../common" }
bincode = "1.3.3"

cpal = { version = "0.15.3", features = ["wasm-bindgen", "jack"] }
opus = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
rubato = "0.16"
